[project]
name = "entur-departures"
version = "0.1.0"
description = ""
authors = [
    {name = "Anders Birkenes",email = "datagutten@datagutten.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "entur-api (>=1.0,<2.0)",
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
